<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Pipi">PipiValue</string>
    <string name="btnNum0">0</string>
    <string name="lblNum1">First Number:</string>
    <string name="lblNum2">Second Number:</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="lblResult">Result:</string>
    <string name="btnMul">*</string>
    <string name="btnDiv">/</string>

</resources>
